Bug 157085 - CRASH: fixing accessibility check of deleted image
Summary: CRASH: fixing accessibility check of deleted image
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-09-04 11:30 UTC by Xisco Faulí
Modified: 2023-09-19 10:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (6.59 KB, text/plain)
2023-09-04 17:26 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-09-04 11:30:59 UTC
Steps to reproduce:
1. Open writer
2. Open the navigator
3. Insert an image
4. In the accessibility check fix the "Missing alternative or description text" warning
5. Delete the image from the navigator
6. Click cancel/accept in the Description dialog

-> Crash

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 871cb4048ec50ea9970269c34c1dd71ce6d27a13
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-09-04 11:32:19 UTC
Regression introduced by

author	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	2023-06-01 16:24:58 +0200
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	2023-06-05 08:19:14 +0200
commit 5ec593ac096395c9915e16acc1a2699432d10af5 (patch)
tree 4f4f3fa6c2ab0fe733c9686069c11f83653288e5
parent 1f09bab0d033953542d17987e1de56cebfa3497b (diff)
Update a11y check after quick fix actions
Comment 2 Xisco Faulí 2023-09-04 12:46:27 UTC
Another way to reproduce it:
1. Open Writer
2. Click on the fix button (Document title is not set)
3. Close Writer
4. Close LibreOffice

-> Crash
Comment 3 Julien Nabet 2023-09-04 17:26:10 UTC
Created attachment 189346 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I got a crash at step 4.
Comment 4 Commit Notification 2023-09-08 11:23:58 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/48129cabb9a5636207d3b8f4f9fa4e4abac61b8a

tdf#157085 Make doc title dialog modal

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2023-09-19 10:08:22 UTC
Verified in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0c4913e03e8427a576138601958f2dbf13b8c37b
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Samuel, thanks for fixing this issue!!
Comment 6 Commit Notification 2023-09-19 10:09:21 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/9cecc2927bdffcb6235a9d0baf649e14c6c7beb2

tdf#157085 Make doc title dialog modal

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.