tdf#157085 Make doc title dialog modal

Change-Id: I7a7574c3ffaa45aeb9bb97d9a1963c52d5619d99
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156658
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit 48129cabb9a5636207d3b8f4f9fa4e4abac61b8a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156732
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>